[gd_scene load_steps=10 format=3 uid="uid://iuofmhwbfjvf"]

[ext_resource type="Texture2D" uid="uid://cwuy4b17rh7ql" path="res://Mini Pixel Pack 3/Space_BG (2 frames) (64 x 64).png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://dh4312benny7t" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://bovam80omx871" path="res://player.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://cyfsngfatgu3n" path="res://ui.tscn" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://o6gwbftsnc8c" path="res://Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://cr7usmfo6apt8" path="res://Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="7_272bh"]

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
step = 0.033
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"scroll": SubResource("Animation_1bvp3")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(120, 160)
texture = ExtResource("1_0xm2m")
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="Player" parent="." instance=ExtResource("2_h2yge")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7mycd")
}
autoplay = "scroll"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("5_lquwl")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("6_7mycd")

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("7_272bh")

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="update_shield"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
